service.yml
apiVersion: v1
kind: Service
metadata:
  name: socketio
spec:
  selector:
    app: socketio
  ports:
  - port: 3000
    targetPort: 3000
