ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socketio
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: socketio
          servicePort: 3000
